tests/invalid/proc_without_return.lang
module main

func return_int() -> i32 {

}
